--- a/HTML/start.html
+++ b/HTML/start.html
@@ -1,12 +1,95 @@
  <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Title of the document</title>
-</head>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>Anders Homepage's</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
 
-<body>
-Content of the document......
-</body>
+	<body>
+		<header class="banner">
+			<h1>News</h1>
+			<p>Local and National News</p>
+		</header>
+		
+	<nav>
+		<ul>
+			<li><a href=Index.html>Index</a></li>
+			<li><a href=Archives.html>Archives</a></li>
+			<li><a href=About.html>About</a></li>
+		</ul>
+	</nav>
+	
+			
+	<main>
+		<section>
+		<h2>Local News</h2>
+			<article>
+				<header>
+					<h3>Fire fighters rescue man from building</h3>
+					<p>(author, date)</p>
+				</header>
+				<p>This is the story text. This is the story text.</p>
+				<p>This is the story text. This is the story text.</p>
+			</article>
+		<h2>National News</h2>
+			<article>
+				<header>
+					<h3>Thousands are without power</h3>
+					<p>(author, date)</p>
+				</header>
+				<p>This is the story text. This is the story text.</p>
+				<p>This is the story text. This is the story text.</p>
+			</article>
+			<article>
+				<header>
+					<h3>Tree are big</h3>
+					<p>(author, date)</p>
+				</header>
+				<p>This is the story text. This is the story text.</p>
+				<p>This is the story text. This is the story text.</p>
+				
+			</article>
+		</section>
+		<p>This is the main content
+
+	</main>
+		<aside>
+	 	<h2>Be a news report</h2>
+	 	<p>If you see news happening -Send us a Text. </p>
+	 	<p>Name<br>Address<br>City &State <br>Zip code<br>.......................................</p>
+	 </aside>
+	 
+	<audio controls autoplay loop>
+	  <source src="horse.ogg" type="audio/ogg">
+	  <source src="horse.mp3" type="audio/mpeg">
+	  Your browser does not support the audio tag.
+	</audio>
+	<video controls autoplay loop>
+	  <source src="horse.mp4" type="video/mp4">
+	  <source src="horse.ogg" type="video/ogg">
+	  Your browser does not support the audio tag.
+	</video>
+	
+	<h1>Examples</h1>
+	<img src="ball.jpg" alt="red ball" height="200 with=200">
+	<p>Click on image
+	<a href="www.spacex.com">
+	<img src="ball.jpg" alt="red ball" height="200 with=200">
+	</a>
+	</p>
+	<h2>Examples</h2>
+	<h3>Examples</h3>
+	<h4>Examples</h4>
+	<h5>Examples</h5>
+	<h6>Examples</h6>
+	
+	<p>Content of the document............................................</p>
+	
+	<footer>
+		<p>Footer Information</p>
+	</footer>
+	 
+	</body>
 
 </html> 
